Fix: section spacing inconsistent with magick.css

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -45,9 +45,10 @@ vellum-doc::part(index-h4) {
   font-size: 0.8em;
 }
 
+#document h1,
 #document h2,
 #document h3,
 #document h4 {
-  margin-top: 1.5em;
-  margin-bottom: 1em;
+  margin: 1.4rem 0 0.7rem;
+  padding: 1.4rem 0 0.7rem;
 }
